# Python-Learning

./: README.md  docker-compose.yml  requiremnts.txt
Aula_01/Decoradores/: 03-Exp_Calculadora.py  04-Decoradores.py  04.1-Decoradores_AcucarSintatico.py  05.1-Decorador_Retorna_Valor_Decorado.py  06-Decorador_Introspeccao.py
Aula_01/Iteradores/: 01-Iteradores.py.py
Aula_02/Modo_Escrita/: 01-arquivo_write.py  teste.txt
Aula_02/Modo_Leitura/: 02-arquivo_readline.py  03-for_arquivo_readline.py
Aula_04/: usuario.csv
Aula_07/: DB_API.py  meu_banco.sqlite
Aula_08/: MakeFile  docker-compose.yml
Aula_08/atleta/: models.py  schemas.py
Aula_08/categorias/: models.py
Aula_08/centro_treinamento/: models.py
Aula_08/contrib/repository/: models.py
Aula_09/: .pre-commit-config.yaml  pyproject.toml  readme.md
TDD/: README.md
advanced/Decoradores/: 01-Functions.py  02-Inner_Functions.py  05-Decorador_Com_Arg.py
advanced/Geradores/: 01-Geradores.py
alembic/: env.py
data/: Tratamento_Errors.py
data/CSV/: Arquivo_Csv.py
databases/Migrations/: alembic.ini
files_io/: 01_os_shutil.py
files_io/Modo_Leitura/: 04-while_arquivo_readline.py
notes/: Santander-Note-BD.md  Santander-Note-Py.md
projects/Project-1- Gym/categorias/: schemas.py
projects/Project-1- Gym/centro_treinamento/: schemas.py
projects/Project-1- Gym/contrib/: routers.py
projects/Project-1- Gym/workout_api/: main.py
projects/Project-2- Store/: .env  README.md
projects/Project-2- Store/store/db/: mongo.py
projects/Project-2- Store/testes/: factories.py
