[project]
name = "tdd_project"
version = "0.0.1"
description = ""
authors = [
    {name = "Erick Santos", email = "erick.kine2012@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0.post1",
    "pydantic==2.5.1",
    "pydantic-settings==2.1.0",
    "motor==3.3.1",
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.21.1,<0.22.0",
    "pre-commit>=3.5.0,<4.0.0",
    "pymongo (<4.8)"
]  # <- FECHAMENTO ADICIONADO AQUI

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src"
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "tdd_project" }]
